--- a/AppShell.xaml
+++ b/AppShell.xaml
@@ -3,12 +3,11 @@
     x:Class="MauiTestApp.AppShell"
     xmlns="http://schemas.microsoft.com/dotnet/2021/maui"
     xmlns:x="http://schemas.microsoft.com/winfx/2009/xaml"
-    xmlns:local="clr-namespace:MauiTestApp"
+    xmlns:local="clr-namespace:MauiTestApp.Views"
     Title="MauiTestApp">
 
     <ShellContent
-        Title="Home"
-        ContentTemplate="{DataTemplate local:MainPage}"
-        Route="MainPage" />
+        ContentTemplate="{DataTemplate local:SearchView}"
+        Route="SearchPage" />
 
 </Shell>
